# bitcoin2-prototype

./: README.md
bitcoin2-prototype/: Cargo.toml  README.md  requirements.txt
bitcoin2-prototype/src/blockchain/: mod.rs
bitcoin2-prototype/src/consensus/: randomx.rs
bitcoin2-prototype/src/crypto/: quantum_sign.rs
bitcoin2-prototype/src/network/: p2p.rs
bitcoin2-prototype/src/node/: cli.rs  main.rs
