[package]
name = "bitcoin2-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
oqs = "0.7"
libp2p = { version = "0.50", features = ["tcp-tokio", "ping", "noise"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
randomx-rs = "0.3"
once_cell = "1.10"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"